/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'application'
    id 'java'
    id 'maven-publish'
    id 'antlr'
}

application {
    mainClass.set('com.kanatti.jackson.Test2')
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.hibernate:hibernate-validator:5.1.3.Final'
    implementation 'javax.el:javax.el-api:2.2.4'
    implementation 'org.glassfish.web:javax.el:2.2.4'

    antlr "org.antlr:antlr4:4.7.1"

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'

    implementation 'io.netty:netty-all:4.1.115.Final'

    testImplementation 'junit:junit:4.11'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    // lucene
    implementation 'org.apache.lucene:lucene-core:7.7.3'
    implementation 'org.apache.lucene:lucene-analyzers-common:7.7.3'

    // SLF4J 2.x with Logback (compatible with Arrow 18.3.0)
    implementation 'ch.qos.logback:logback-classic:1.4.14'

    // Apache Arrow (upgraded for RunEndEncodedVector support)
    implementation 'org.apache.arrow:arrow-vector:18.3.0'
    implementation 'org.apache.arrow:arrow-memory-netty:18.3.0'
}

group = 'com.kanatti'
version = '1.0-SNAPSHOT'
description = 'justjava'
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

sourceSets.main.antlr.srcDirs = ['src/main/antlr']

generateGrammarSource {
    arguments += ['-visitor']
}


publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

sourceSets {
    mapOfEntries {
        java.srcDir 'src/mapOfEntries/java'
    }
    putMethod {
        java.srcDir 'src/putMethod/java'
    }
}

task compileMapOfEntries(type: JavaCompile) {
    source = sourceSets.mapOfEntries.java
    classpath = configurations.compileClasspath
    destinationDirectory = file("$buildDir/classes/mapOfEntries")
}

task compilePutMethod(type: JavaCompile) {
    source = sourceSets.putMethod.java
    classpath = configurations.compileClasspath
    destinationDirectory = file("$buildDir/classes/putMethod")
}




test {
    testLogging {
        showStandardStreams = true
        events = ["failed"]

        afterSuite { desc, result ->
            if (!desc.parent) { // will match the outermost suite
                def output = "Results: ${result.resultType} (${result.testCount} tests, " +
                        "${result.successfulTestCount} passed, ${result.failedTestCount} failed, " +
                        "${result.skippedTestCount} skipped)" as Object
                def startItem = '|  ', endItem = '  |'
                def repeatLength = startItem.length() + output.length() + endItem.length()
                println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
            }
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// Define a custom task to run a specific main class
task runMain(type: JavaExec) {
    group = 'Execution'
    description = 'Runs the specified main class'

    if (project.hasProperty('mainClass')) {
        mainClass.set(project.getProperty('mainClass'))
        classpath = sourceSets.main.runtimeClasspath
    }

    // Required JVM arguments for Apache Arrow
    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED']
}